# USACOArena

./: .gitignore  .secrets.baseline  1450_correct.cpp  1450_wrong.cpp  AGENTS_1450.md  CHANGELOG.md  README.md  README_OJ.md  STATISTICS_UPDATE_SUMMARY.md  agents.py  api.py  batch_competition.sh  batch_competition_lean.sh  competition.py  convert_all_json_to_csv.sh  debug_parse.py  failures.jsonl  json_to_csv_converter.py  judge.py  judge_client.py  main.py  models.py  problem_loader.py  prompts.py  pyproject.toml  repeat_competition.sh  requirements.txt  response.json  run_competition.py  run_competition_loop.sh  service_manager.sh  storage.py  test_new_parse.py  test_parse.py  test_server_comprehensive.py
agents/: __init__.py
competemas/: __init__.py  main.py
competition_results/: MAS Programming Competition 2025_20250623_210018.json  MAS Programming Competition 2025_20250624_151821.json  MAS Programming Competition 2025_20250624_152640.json  MAS Programming Competition 2025_20250625_193149.json  MAS Programming Competition 2025_20250625_194922.json  MAS Programming Competition 2025_20250625_195419.json  MAS Programming Competition 2025_20250626_113641.json  MAS Programming Competition 2025_20250626_114718.json  MAS Programming Competition 2025_20250626_180356.json  MAS Programming Competition 2025_20250626_231801.json  MAS Programming Competition 2025_20250626_233257.json  MAS Programming Competition 2025_20250626_233314.json  MAS Programming Competition 2025_20250627_112131.json  MAS Programming Competition 2025_20250627_112454.json  MAS Programming Competition 2025_20250627_130756.json  (+5 more)
config/: 10glm.json  (+82 more)
(+249 files in other folders)
